# xwrap

./: .clang-format  .clangd  CMakeLists.txt  justfile
examples/: example.cpp
include/xwrap/: display.hpp  image.hpp  keys.hpp  utils.hpp  window.hpp  xwrap.hpp
src/: display.cpp  event.cpp  window.cpp  xshm.cpp
